# ray

./: .gitignore  CMakeLists.txt  HOWTO_CMake.txt  Makefile  SMALL_NIFTY_THINGS.txt  aabb.h  basics.h  batch.h  bvh.h  bvh_build.h  bvh_build_centroid_sah.h  bvh_build_common.h  bvh_build_factory.h  bvh_build_sbvh.h  bvh_build_simple.h  bvh_build_stupid.h  bvh_diag.h  bvh_traverse.h  camera.h  color.h  color.hpp  debug_print.h  interactive.h  lighting.h  linalg.h  linalg_ref.h  loadObject.h  loader.cc  loader.h  main.cc  material.h  mesh.h  output.h  params.h  pathtrace.h  pathtrace.hpp  primitive.h  ray.sln  ray.vcxproj  ray.vcxproj.filters  (+6 more)
data/: 4teapots-plane.scene  4teapots.scene  armadillo.scene  buddha.scene  bunny-45.scene  bunny-hi.scene  bunny.scene  classic.scene  col-lights.scene  cube.mtl  cube.scene  cubes-plane.scene  cubes.scene  dragon-front.scene  dragon-plane.scene  dragon.scene  dragon2.scene  ducky.scene  falling-trees.scene  forest.scene  hairball-plane.scene  hairball.scene  ladybird.scene  lone-sphere.scene  pic.mtl  plane.mtl  plane.scene  point.scene  pumpkin.scene  sportsCar.scene  sportscar.scene  spots.scene  spots2.scene  spots3.scene  standard.mtl  teapot-hi.scene  teapot-no-transform.scene  teapot-plane.scene  teapot-spout.scene  teapot.scene  (+5 more)
final_report/: CMakeLists.txt  Makefile  main.tex  perf.tex  report.tex
report/: CMakeLists.txt  UseLATEX.cmake  main.tex  perf.tex  report.tex
scene/: classic.scene  col-lights.scene  point.scene  point_no_ground.scene  sportscar.scene  spots.scene  spots2.scene  teapot.scene  test1.scene  test2.scene  tree.scene
scripts/: reflection.R
template/: surface.cpp  surface.h  template.cpp  template.h  threads.cpp  threads.h  tmpl84.00a_2015.vcxproj  tmpl84.00a_2015.vcxproj.filters
test/: CMakeLists.txt  camera_tests.cc  linalg_ref_test.cc  primitive_tests.cc  test_main.cc  test_utils.h  v3_test.cc
